syntax = "proto3";

package tateyama.proto.core.request;

option java_multiple_files = false;
option java_package = "com.tsurugidb.core.proto";
option java_outer_classname = "CoreRequest";

// the request message to tateyama core service.
message Request {
    // service message version (major)
    uint64 service_message_version_major = 1;

    // service message version (minor)
    uint64 service_message_version_minor = 2;

    // reserved for system use
    reserved 3 to 10;

    // the request command.
    oneof command {
        UpdateExpirationTime update_expiration_time = 11;
    }
    reserved 12 to 99;
}

// update session expiration time
message UpdateExpirationTime {

    // the expiration time (milliseconds from now) to be set
    uint64 expiration_time = 1;
}
